Add location to ios plist and bump version

--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="de.appplant.cordova.plugin.background-mode"
-        version="0.6.4">
+        version="0.7.0">
 
     <name>BackgroundMode</name>
 
@@ -41,10 +41,11 @@
             </feature>
         </config-file>
 
-        <!-- The app is able to run in background through audio mode -->
+        <!-- The app is able to run in background through audio and location modes -->
         <config-file target="*-Info.plist" parent="UIBackgroundModes">
             <array>
                 <string>audio</string>
+                <string>location</string>
             </array>
         </config-file>
 
